--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,13 +34,13 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:26.1.0'
     // RecyclerView
     implementation 'com.android.support:recyclerview-v7:26.1.0'
-    implementation 'com.google.android.gms:play-services-maps:11.8.0'
-
-    compile 'com.google.android.gms:play-services-maps:9.0.1'
 
     //for yelp
     compile 'io.github.ranga543:yelp-fusion-client:0.1.4'
 
     //for image load
     compile 'com.squareup.picasso:picasso:2.5.2'
+    //location
+    //Google play services
+    compile 'com.google.android.gms:play-services:12.0.1'
 }
